# as2_platform_tello

./: CMakeLists.txt  package.xml
.github/workflows/: build_humble.yaml
config/: platform_default.yaml
include/as2_platform_tello/: as2_platform_tello.hpp  tello_platform.hpp
include/tello/: socket_udp.hpp  tello.hpp
launch/: tello_platform.launch.py
src/: as2_platform_tello.cpp  as2_platform_tello_node.cpp  tello_platform.cpp  tello_platform_node.cpp
src/tello/: socket_udp.cpp  tello.cpp
tello/include/: socket_udp.hpp
tello/include/tello/: tello.hpp
tello/src/: socket_udp.cpp  tello.cpp
tello/test/: client_udp.cpp  tello_test.cpp  udp_server.py
tests/: CMakeLists.txt  main.py  tello_test.cpp  tello_upd_connection_test.cpp
